Fix de errores y añadidos endpoints