@@ -7,9 +7,9 @@ import com.reservapp.backend.model.Ciudad;
 import com.reservapp.backend.repository.CiudadRepository;
 import com.reservapp.backend.service.CiudadService;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CiudadServiceImpl implements CiudadService {
@@ -22,15 +22,17 @@ public class CiudadServiceImpl implements CiudadService {
     }
 
     @Override
+    @Transactional
     public CiudadDTO crearCiudad(CiudadDTO dto) {
         Ciudad ciudad = ciudadMapper.toEntity(dto);
-        Ciudad guardado = ciudadRepository.save(ciudad);
-        return ciudadMapper.toDTO(guardado);
+        return ciudadMapper.toDTO(ciudadRepository.save(ciudad));
     }
 
     @Override
+    @Transactional
     public CiudadDTO actualizarCiudad(Long id, CiudadDTO dto) {
-        Ciudad ciudad = ciudadRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Ciudad no encontrada"));
+        Ciudad ciudad = ciudadRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Ciudad no encontrada"));
 
         ciudad.setNombre(dto.getNombre());
         ciudad.setCodPostal(dto.getCodPostal());
@@ -40,26 +42,27 @@ public class CiudadServiceImpl implements CiudadService {
 
     @Override
     public CiudadDTO obtenerCiudadPorId(Long id) {
-        Ciudad ciudad = ciudadRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Ciudad no encontrada"));
+        Ciudad ciudad = ciudadRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Ciudad no encontrada"));
         return ciudadMapper.toDTO(ciudad);
     }
 
     @Override
     public List<CiudadDTO> listarCiudades() {
-        return ciudadRepository.findAll().stream().map(ciudadMapper::toDTO).collect(Collectors.toList());
+        return ciudadRepository.findAll().stream().map(ciudadMapper::toDTO).toList();
     }
 
     @Override
     public List<CiudadDTO> listarCiudadesPorProvincia(Long idProvincia) {
-        return ciudadRepository.findByProvinciaId(idProvincia).stream().map(ciudadMapper::toDTO).collect(Collectors.toList());
+        return ciudadRepository.findByProvinciaId(idProvincia).stream().map(ciudadMapper::toDTO).toList();
     }
 
     @Override
+    @Transactional
     public void eliminarCiudad(Long id) {
         if (!ciudadRepository.existsById(id)) {
             throw new ResourceNotFoundException("Ciudad no encontrada");
         }
-
         ciudadRepository.deleteById(id);
     }
 }
