@@ -7,9 +7,9 @@ import com.reservapp.backend.model.Provincia;
 import com.reservapp.backend.repository.ProvinciaRepository;
 import com.reservapp.backend.service.ProvinciaService;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProvinciaServiceImpl implements ProvinciaService {
@@ -22,15 +22,17 @@ public class ProvinciaServiceImpl implements ProvinciaService {
     }
 
     @Override
+    @Transactional
     public ProvinciaDTO crearProvincia(ProvinciaDTO dto) {
         Provincia provincia = provinciaMapper.toEntity(dto);
-        Provincia guardado = provinciaRepository.save(provincia);
-        return provinciaMapper.toDTO(guardado);
+        return provinciaMapper.toDTO(provinciaRepository.save(provincia));
     }
 
     @Override
+    @Transactional
     public ProvinciaDTO actualizarProvincia(Long id, ProvinciaDTO dto) {
-        Provincia provincia = provinciaRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Provincia no encontrada"));
+        Provincia provincia = provinciaRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provincia no encontrada"));
 
         provincia.setNombre(dto.getNombre());
 
@@ -39,21 +41,22 @@ public class ProvinciaServiceImpl implements ProvinciaService {
 
     @Override
     public ProvinciaDTO obtenerProvinciaPorId(Long id) {
-        Provincia provincia = provinciaRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Provincia no encontrada"));
+        Provincia provincia = provinciaRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provincia no encontrada"));
         return provinciaMapper.toDTO(provincia);
     }
 
     @Override
     public List<ProvinciaDTO> listarProvincias() {
-        return provinciaRepository.findAll().stream().map(provinciaMapper::toDTO).collect(Collectors.toList());
+        return provinciaRepository.findAll().stream().map(provinciaMapper::toDTO).toList();
     }
 
     @Override
+    @Transactional
     public void eliminarProvincia(Long id) {
         if (!provinciaRepository.existsById(id)) {
             throw new ResourceNotFoundException("Provincia no encontrada");
         }
-
         provinciaRepository.deleteById(id);
     }
 }
