@@ -1,5 +1,6 @@
 package com.reservapp.backend.service.impl;
 
+import com.reservapp.backend.dto.RegisterRequest;
 import com.reservapp.backend.dto.UsuarioDTO;
 import com.reservapp.backend.exception.ResourceNotFoundException;
 import com.reservapp.backend.mapper.UsuarioMapper;
@@ -8,53 +9,67 @@ import com.reservapp.backend.repository.UsuarioRepository;
 import com.reservapp.backend.service.UsuarioService;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UsuarioServiceImpl implements UsuarioService {
     private final UsuarioRepository usuarioRepository;
     private final UsuarioMapper usuarioMapper;
+    private final PasswordEncoder passwordEncoder;
 
-    public UsuarioServiceImpl(UsuarioRepository usuarioRepository, UsuarioMapper usuarioMapper) {
+    public UsuarioServiceImpl(UsuarioRepository usuarioRepository, UsuarioMapper usuarioMapper,
+                              PasswordEncoder passwordEncoder) {
         this.usuarioRepository = usuarioRepository;
         this.usuarioMapper = usuarioMapper;
+        this.passwordEncoder = passwordEncoder;
     }
 
     @Override
-    public UsuarioDTO crearUsuario(UsuarioDTO dto) {
-        Usuario usuario = usuarioMapper.toEntity(dto);
-        Usuario guardado = usuarioRepository.save(usuario);
-        return usuarioMapper.toDTO(guardado);
+    @Transactional
+    public UsuarioDTO crearUsuario(RegisterRequest request) {
+        Usuario usuario = new Usuario();
+        usuario.setNombre(request.getNombre());
+        usuario.setApellidos(request.getApellidos());
+        usuario.setEmail(request.getEmail());
+        usuario.setTelefono(request.getTelefono());
+        usuario.setPassword(passwordEncoder.encode(request.getPassword()));
+        usuario.setRol(request.getRol() != null ? request.getRol() : Usuario.Rol.CLIENTE);
+        return usuarioMapper.toDTO(usuarioRepository.save(usuario));
     }
 
     @Override
+    @Transactional
     public UsuarioDTO actualizarUsuario(Long id, UsuarioDTO dto) {
-        Usuario usuario = usuarioRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+        Usuario usuario = usuarioRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
 
         usuario.setNombre(dto.getNombre());
         usuario.setApellidos(dto.getApellidos());
         usuario.setEmail(dto.getEmail());
         usuario.setTelefono(dto.getTelefono());
-        usuario.setRol(Usuario.Rol.valueOf(dto.getRol()));
+        usuario.setRol(dto.getRol());
 
         return usuarioMapper.toDTO(usuarioRepository.save(usuario));
     }
 
     @Override
     public UsuarioDTO obtenerUsuarioPorId(Long id) {
-        Usuario usuario = usuarioRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+        Usuario usuario = usuarioRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
         return usuarioMapper.toDTO(usuario);
     }
 
     @Override
     public List<UsuarioDTO> listarUsuarios() {
-        return usuarioRepository.findAll().stream().map(usuarioMapper::toDTO).collect(Collectors.toList());
+        return usuarioRepository.findAll().stream().map(usuarioMapper::toDTO).toList();
     }
 
     @Override
+    @Transactional
     public void eliminarUsuario(Long id) {
         if (!usuarioRepository.existsById(id)) {
             throw new ResourceNotFoundException("Usuario no encontrado");
